@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Remote API
  * %%
- * Copyright (C) 2005 - 2022 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -913,8 +913,8 @@ public abstract class AbstractBaseApiTest extends EnterpriseTestApi
     {
         String[] parts = currentVersionLabel.split("\\.");
 
-        int majorVer = new Integer(parts[0]).intValue();
-        int minorVer = new Integer(parts[1]).intValue();
+        int majorVer = Integer.valueOf(parts[0]).intValue();
+        int minorVer = Integer.valueOf(parts[1]).intValue();
 
         Map<String, String> params = new HashMap<>();
         params.put(Nodes.PARAM_OVERWRITE, "true");
