@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Repository
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -269,8 +269,8 @@ public class ScriptExecutorImpl implements ScriptExecutor
                 varAssignments.put("FALSE", "0");
             }
             long now = System.currentTimeMillis();
-            varAssignments.put("now", new Long(now).toString());
-            varAssignments.put("NOW", new Long(now).toString());
+            varAssignments.put("now", Long.valueOf(now).toString());
+            varAssignments.put("NOW", Long.valueOf(now).toString());
             
             while(true)
             {
