@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Repository
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -515,7 +515,7 @@ public class ContentUsageImpl implements ContentUsageService,
     {
         if (personNodeRef != null)
         {     
-            nodeService.setProperty(personNodeRef, ContentModel.PROP_SIZE_CURRENT, new Long(currentUsage));
+            nodeService.setProperty(personNodeRef, ContentModel.PROP_SIZE_CURRENT, Long.valueOf(currentUsage));
         }
     }
     
@@ -584,7 +584,7 @@ public class ContentUsageImpl implements ContentUsageService,
         NodeRef personNodeRef = getPerson(userName);
         if (personNodeRef != null)
         {
-            nodeService.setProperty(personNodeRef, ContentModel.PROP_SIZE_QUOTA, new Long(currentQuota));
+            nodeService.setProperty(personNodeRef, ContentModel.PROP_SIZE_QUOTA, Long.valueOf(currentQuota));
         }
     }
     
