@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Repository
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -48,7 +48,7 @@ import org.alfresco.service.cmr.repository.AbstractTransformationSourceOptions;
  */
 public class PagedSourceOptions extends AbstractTransformationSourceOptions
 {
-    public static final Integer PAGE_1 = new Integer(1);
+    public static final Integer PAGE_1 = Integer.valueOf(1);
 
     /** The start of the page range in the source document */
     private Integer startPageNumber;
