@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Repository
  * %%
- * Copyright (C) 2005 - 2020 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -259,8 +259,8 @@ public class ThumbnailServiceImplTest extends BaseAlfrescoSpringTest
     {
         ImageTransformationOptions options = new ImageTransformationOptions();
         PagedSourceOptions pagedSourceOptions = new PagedSourceOptions();
-        pagedSourceOptions.setStartPageNumber(new Integer(2));
-        pagedSourceOptions.setEndPageNumber(new Integer(2));
+        pagedSourceOptions.setStartPageNumber(Integer.valueOf(2));
+        pagedSourceOptions.setEndPageNumber(Integer.valueOf(2));
         options.addSourceOptions(pagedSourceOptions);
         
         ThumbnailDefinition thumbnailDefinition = new ThumbnailDefinition(MimetypeMap.MIMETYPE_PDF, options, "doclib_2");
